# scripts

./: .gitignore  .gitpod.yml  .replit  README.md  a.out  backup.bat  bignumber.py  bin.txt  calculator.bat  characterCount.py  classes.txt  fibonacci.py  frac.py  getFileNames.py  gitcmd.bat  githelp.bat  githelp.sh  imageBytes.txt  loadImageFromTxt.py  package.json  pi-calc.py  pingpong.py  primeFunc.py  prog.py  pyproject.toml  randomImage.py  saveImageAsText.py  someData.csv  someData.txt  start.sh  typePrint.py
.ipynb_checkpoints/: pyproject-checkpoint.toml
EV3Python/: firstev3.py
HTML/: GPA.html  README.txt  Untitled-1.css  feedback.html  guessRaga.html  jiphy.py  musictips.html  send.php  soundgame.html  style.css
MyScripts/: annoyer.py  beep.py  challenge.py  getHelp_test.py  getPrice.py  hello.py  if-examples.py  isPrime.py  mouse.py  multiplytable.py  password.py  permutation-combination.py  pi-tune.py  ran.py  sankalpa.py  solarsystem.py  soundTest.py  wordCount.py
Python/: .~lock.data.csv#  Bmi.py  Restaurant_Reviews.tsv  addIndex.py  animation.py  annoyer.py  ardZoom.py  artificial_neural_network-DESKTOP-QK0BS6T.ipynb  artificial_neural_network.ipynb  audioAnalyzer.py  avg.py  beep.py  bignumber.py  bin.txt  binList.py  bingarbled.txt  boxPrint.py  cal.py  camera.py  challenge.py  characterCount.py  classroom.py  clicker.py  compare.py  createFullBackup.py  data-DESKTOP-QK0BS6T.csv  data.csv  dictionary.py  dldata.csv  draw.py  e-calc.py  elif-examples.py  encryptTextFile.py  errata.txt  error.py  factorial.py  fibonacci.py  first_func.py  frac.py  (+185 more)
(+42 files in other folders)
