[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["kidkoder432 <findprajju@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9"
pyperclip = "^1.8"
python-ev3dev = "^1.2"
bs4 = "^0.0.1"
keyboard = "^0.13.5"
pyautogui = "^0.9.50"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
